#636: Converted to BaseSingleEntityCommand and BaseMultipleEntitiesCommand